syntax = "proto3";
package Identity.Services;
import "google/protobuf/wrappers.proto";

message GrpcToken{
  string Token = 1;
}
message User{
  string Id = 1;
  string FirstName = 2;
  string LastName = 3;
  string Role = 4;
  string Email = 5;
}
message GrpcResult{
  int32 Code = 1;
  User User = 2;
}
service AuthService{
  rpc ValidateToken(GrpcToken) returns (GrpcResult);
}